--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,9 +2,11 @@
 @import 'settings'
 @import 'grid'
 @import 'interface'
+@import 'templates/header'
 @import 'templates/search'
 @import 'templates/content'
 @import 'templates/footer'
 @import 'templates/nav'
 @import 'templates/main-page'
 @import 'templates/card'
+@import 'templates/catalog-page'
