--- a/src/sass/templates/_main-page.sass
+++ b/src/sass/templates/_main-page.sass
@@ -18,6 +18,27 @@
         flex-wrap: wrap
         margin-bottom: 40px
 
+.main-slider .slick-dots
+    position: absolute
+    bottom: 30px
+    left: 50%
+    transform: translateX(-50%)
+    display: flex
+    justify-content: center
+
+.main-slider .slick-dots li.slick-active
+    button
+        background-color: #ffffff
+
+.main-slider .slick-dots li button
+    border-radius: 50%
+    background-color: transparent
+    border: 2px solid #ffffff
+    margin: 0 6px
+    font-size: 0
+    display: inline-block
+    height: 16px
+
 .promo
     display: block
     position: relative
