--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -1,28 +1,3 @@
-/* Слайдер - Точки */
-.main-slider .slick-dots
-    position: absolute
-    bottom: 30px
-    left: 50%
-    transform: translateX(-50%)
-    display: flex
-    justify-content: center
-
-/* Слайдер - Активная точка */
-.main-slider .slick-dots li.slick-active
-    button
-        background-color: #ffffff
-
-/* Слайдер - Элемент точки */
-.main-slider .slick-dots li button
-    border-radius: 50%
-    background-color: transparent
-    border: 2px solid #ffffff
-    margin: 0 6px
-    font-size: 0
-    display: inline-block
-    height: 16px
-
-/* Кнопки */
 .button
     width: 100%
     padding: 17px 20px
@@ -37,3 +12,23 @@
     box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.4)
     &:hover
         background-color: #e6e6e6
+    
+.page-title
+    position: relative
+    height: 50px
+    padding: 20px
+    display: flex
+    line-height: 1
+    align-items: center
+    justify-content: center
+    font-weight: bold
+    &__return
+        display: block
+        position: absolute
+        left: 20px
+        top: 50%
+        transform: translateY(-50%)
+    &__icon
+        width: 20px
+        height: 20px
+        fill: #000000
