--- a/src/sass/templates/_card.sass
+++ b/src/sass/templates/_card.sass
@@ -23,19 +23,33 @@
         top: 10px
         left: 10px
         line-height: 1
-        font-size: 1.2rem
-        border-radius: 5px
-        padding: 5px 10px
+        font-size: 1rem
+        border-radius: 3px
+        padding: 4px 8px
+        background-color: #ff0202
+        color: #ffffff
+    &__info
+        position: absolute
+        bottom: 10px
+        left: 10px
+        line-height: 1
+        font-size: 0.8rem
+        border-radius: 3px
+        padding: 4px 8px
         background-color: #ff0202
         color: #ffffff
     &__title
         margin-bottom: 10px
         font-size: 1rem
+        @media ( max-width: 500px )
+            font-size: 0.85rem
     &__price
         margin-bottom: 5px
         font-weight: bold
         font-size: 1.6rem
         line-height: 1
+        @media ( max-width: 500px )
+            font-size: 1.4rem
     &__old-price
         display: inline-block
         position: relative
@@ -48,6 +62,8 @@
             width: 100%
             height: 2px
             background-color: #ff0202
+        @media ( max-width: 500px )
+            font-size: 0.85rem
     @media ( min-width: 768px )
         width: 32%
     @media ( max-width: 370px )
