--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,3 +10,5 @@
 @import 'templates/main-page'
 @import 'templates/card'
 @import 'templates/catalog-page'
+@import 'templates/card-product'
+@import 'templates/similar'
