--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -10,8 +10,22 @@
     justify-content: center
     text-align: center
     box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.4)
+    &--blue
+        padding: 15px 18px
+        background-color: #1B74C1
+        font-size: 1rem
+        color: #ffffff
+        box-shadow: none
     &:hover
         background-color: #e6e6e6
+
+.button--blue
+    &:hover
+        background-color: rgba(#1B74C1, 0.7)
+
+.add-to-cart
+    padding: 15px
+    border-bottom: 1px solid #DFDFDF
     
 .page-title
     position: relative
