--- a/src/sass/templates/_card.sass
+++ b/src/sass/templates/_card.sass
@@ -38,6 +38,15 @@
         padding: 4px 8px
         background-color: #ff0202
         color: #ffffff
+    &__add
+        display: block
+        position: absolute
+        top: 10px
+        right: 10px
+    &__icon
+        width: 30px
+        height: 30px
+        fill: #ffffff
     &__title
         margin-bottom: 10px
         font-size: 1rem
