--- a/src/sass/templates/_header.sass
+++ b/src/sass/templates/_header.sass
@@ -6,3 +6,8 @@
     border-bottom: 1px solid #DFDFDF
     background-color: #ffffff
     z-index: 1000
+    transition: all 0.3s
+    &--transparent
+        transition: all 0.3s
+        background-color: transparent
+        border-bottom: none
